# intel2015

./: .gitignore  CMakeLists.txt  Makefile  TODO.md  entrada.test  main.cpp
cmake/: Utils.cmake
include/: protocol_version.h  protocol_version.h.in
include/base/: ball.h  robot.h  world.h
include/core/skills/: attack.h  defend.h  kick.h  pass.h  skill.h
include/utils/: geom.h  hasorientation.h  hasvelocity.h  point.h  statemachine.h  steppable.h
src/: CMakeLists.txt  main.cpp
src/base/: CMakeLists.txt  robot.h  world.cpp
src/core/: CMakeLists.txt
src/core/skills/: CMakeLists.txt  attack.cpp  attack.h  defend.cpp  kick.cpp  pass.cpp
src/utils/: CMakeLists.txt  point.cpp  statemachine.cpp
utils/: geom.cpp  geom.h  point.cpp  point.h  statemachine.cpp  statemachine.h
